--- a/style5.css
+++ b/style5.css
@@ -18,7 +18,7 @@
 }
 
 .text{
-    text-align: center;
+    text-align: center;;
 }
 
 .text .text-1{
@@ -39,4 +39,17 @@
 .grid {
     display: grid;
     grid-template-columns: 33.3% 33.3% 33.3%;
+    position: relative;
+}
+
+.gird-1, .gird-2, .gird-3 {
+    position: relative;
+}
+
+h2 {
+    position: absolute;
+    color: #f5f5f5;
+    font-size: 80px;
+    top: -88px;
+    left: -50px;
 }
