--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body {
 .background {
     width: 100%;
     height: 700px;
-    background-image: url(./image/background.jpg); 
+    background-image: url(https://i.ibb.co/xFv8B49/background.jpg); 
 }
 
 .contain {
