--- a/style5.css
+++ b/style5.css
@@ -48,8 +48,9 @@
 
 h2 {
     position: absolute;
-    color: #f5f5f5;
+    color: #d06f6f;
     font-size: 80px;
     top: -88px;
     left: -50px;
+    z-index: 1;
 }
